# LablGTK changes log

In Lablgtk-3.0.beta4:

2019.02.10 [Emilio Gallego]
  * Add dune support (cf GPR#38,#41,#42,#44)

In Lablgtk-3.0.beta3:

2019.01.11 [Jacques]
  * Update propcc.ml4 as suggested by Virgile Prevosto
  * Merge Lablgtk3 source mark attributes #35 by Virgile Prevosto

2019.01.11 [Claudio Sacerdoti Coen]
  * added hard dependency on cairo2 (aka ocaml-cairo)
  * Gdk.cairo is now equal to Cairo.context
  * code of cairo-pango (part of ocaml-cairo) by Christophe Troestler
    moved into lablgtk3
  * added new examples {cairo,pango1,pango2}.ml
  * GPango.context#get_font_description added
  * GPango.context_rw merged into GPango.context

2019.01.04 [Jacques]
  * merge draw signal PR by Claudio
  * remove incorrect statusbar properties

2018.12.22 [Claudio Sacerdoti Coen]
  * update examples/glade and README

2018.12.21 [Jacques]
  * adjust some function names
  * merge GtkBuilder support and new lablgladecc by Claudio Sacerdoti Coen
    and Andrea Condoluci

2018.12.19 [Jacques]
  * Resurect GMenu.separator_item
  * fix examples eventbox.ml, events.ml, editor2.ml

In Lablgtk-3.0.beta2:

2018.12.14 [Jacques]
  * Remove unsupported extensions from configure

2018.12.9 [Guillaume Melquiond]
  * Support property "expand" of GtkTreeViewColumn
  * Support property "placeholder-text" of GtkEntry
  * Restore GPack.button_box ?spacing argument
  * Restore GtkMenu.MenuItem.separator_create
  * Remove properties allow-grow and allow-shrink from GtkWindow

2018.12.6 [Jacques]
  * allow compiling with Gtk 3.18 (for ubuntu 16.04)

2018.11.30 [Jacques]
  * ensure we compile on ocaml 4.05 (report by Ralf Treinen)
  * put examples explicitly in the public domain (report by Ralf Treinen)

2018.11.29 [Jacques]
  * create a banch called "lablgtk3", based on lablgtk2on3
    (the old lablgtk3 branch of 2011 is renamed lablgtk3_monate)
  * merge all changes from Hugo Herbelin's lablgtk2on3-hh
  * rename everything to lablgtk3, allow installing in parallel with lablgtk2