@@ -22,9 +22,6 @@
 
 (* $Id$ *)
 
-external _gtkfile_init : unit -> unit = "ml_gtkfile_init"
-let () = _gtkfile_init ()
-
 module FileFilter = struct
   external create : unit -> Gtk.file_filter Gtk.obj
       = "ml_gtk_file_filter_new"
